# sprMIP

./: README.md  patch_selected_fast.m  sprLabelPropagationmod.cxx
BayesianSegmentation/: CMakeLists.txt  sprBayesEval.cxx  sprBayesTrain.cxx
ComputeHistogram/: CMakeLists.txt  ImageHistogram.cxx  ImageHistogram.cxx~
GraphCutImageFilter/: CMakeLists.txt  ImageCompare.cxx  sprBoostGraph.h  sprGraphCutImageFilter.h  sprGraphCutImageFilter.txx  sprGraphCutLevelSet.cxx
LabelPropagation/: CMakeLists.txt  sprLabelPropagation.cxx
MRIntensityNormalization/: CMakeLists.txt  sprMRnormalization.cxx  sprMRnormalization.h  sprMRnormalization.hxx
MultiAtlasVoting/: CMakeLists.txt  sprMultiAtlasVoting.cxx
PATCH_FUSION_SOURCE/: patch_selected_fast.m
PerformanceMeasures/: CMakeLists.txt  sprDice.cxx
Registration/: CMakeLists.txt  DeformableRegistrationlastversion.cxx  MutualInformationBlockImageToImageMetric.h  MutualInformationBlockImageToImageMetric.hxx  Registration.cxx  sprBlockImageFilter.h  sprBlockImageFilter.hxx
